--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
 
         <section class="links-row">
           <div class="links-digest reveal">
-            <a href="rem-mndly.vercel.app" class="digest-item">
+            <a href="https://rem-mndly.vercel.app" class="digest-item">
               <div>
                 <span class="num">01</span>
                 <strong>rem</strong>
